fix iframe max width on mobile

--- a/assets/sass/partials/_modules.scss
+++ b/assets/sass/partials/_modules.scss
@@ -49,7 +49,8 @@ button {
 }
 
 iframe {
-
+    max-width: 100%;
+    
     &.button {
         padding:0;
     }
